--- a/world/views/index.ejs
+++ b/world/views/index.ejs
@@ -134,7 +134,7 @@
 				<div class="container-fluid">
 				
 					<div class="section-heading">
-						<h2>News</h2>
+						<h2>world class education</h2>
 						<div class="separator"></div>						
 					</div>
 					
@@ -149,9 +149,9 @@
 										<li><i class="fa fa-comment"></i> <span>180</span></li>
 									</ul>
 								</figure>
-								<h4>Snowy Forest</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>소개 </h4>
+								<p> Wce 소개 멘트를 씁니다</p>		
+								<a href="/blogwce" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -163,9 +163,9 @@
 										<li><i class="fa fa-comment"></i> <span>16</span></li>
 									</ul>
 								</figure>
-								<h4>Nice View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>연혁</h4>
+								<p> 연혁 멘트를 씁니다</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -177,9 +177,9 @@
 										<li><i class="fa fa-comment"></i> <span>280</span></li>
 									</ul>
 								</figure>
-								<h4>Cool Waves</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>조직도</h4>
+								<p> 조직도 멘트를 씁니다</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -191,9 +191,9 @@
 										<li><i class="fa fa-comment"></i> <span>95</span></li>
 									</ul>
 								</figure>
-								<h4>Plane View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>교육비전</h4>
+								<p>교육비전 멘트를 씁니다.</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -205,9 +205,9 @@
 										<li><i class="fa fa-comment"></i> <span>35</span></li>
 									</ul>
 								</figure>
-								<h4>Skie Rides</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>사업영역</h4>
+								<p> 사업영역 멘트를 씁니다</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 							
@@ -225,7 +225,7 @@
 				<div class="container-fluid">
 				
 					<div class="section-heading">
-						<h2>News</h2>
+						<h2>KAGE 영재교육학술원</h2>
 						<div class="separator"></div>						
 					</div>
 					
@@ -240,9 +240,9 @@
 										<li><i class="fa fa-comment"></i> <span>180</span></li>
 									</ul>
 								</figure>
-								<h4>Snowy Forest</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>교육목표</h4>
+								<p> 교육목표 멘트를 줍니다.</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -254,9 +254,9 @@
 										<li><i class="fa fa-comment"></i> <span>16</span></li>
 									</ul>
 								</figure>
-								<h4>Nice View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>교육방법</h4>
+								<p> 교육방법 멘트를 줍니다</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -268,9 +268,9 @@
 										<li><i class="fa fa-comment"></i> <span>280</span></li>
 									</ul>
 								</figure>
-								<h4>Cool Waves</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>교수학습모형</h4>
+								<p> 교수학습 모형 멘트를 씁니다</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -282,9 +282,9 @@
 										<li><i class="fa fa-comment"></i> <span>95</span></li>
 									</ul>
 								</figure>
-								<h4>Plane View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>프로그램소개</h4>
+								<p> 프로그램 소개를 합니다</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -296,9 +296,9 @@
 										<li><i class="fa fa-comment"></i> <span>35</span></li>
 									</ul>
 								</figure>
-								<h4>Skie Rides</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>Program Map</h4>
+								<p>프로그램 맵이 뭔가요 </p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 							
@@ -315,7 +315,7 @@
 				<div class="container-fluid">
 				
 					<div class="section-heading">
-						<h2>News</h2>
+						<h2>Davinci</h2>
 						<div class="separator"></div>						
 					</div>
 					
@@ -330,8 +330,8 @@
 										<li><i class="fa fa-comment"></i> <span>180</span></li>
 									</ul>
 								</figure>
-								<h4>Snowy Forest</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
+								<h4>Code-Davinci</h4>
+								<p> 코드 다빈치 에 대해 설명하세요</p>		
 								<a href="blog-single.html" class="link">Read more...</a>	
 							</div>	
 						</div>
@@ -344,9 +344,9 @@
 										<li><i class="fa fa-comment"></i> <span>16</span></li>
 									</ul>
 								</figure>
-								<h4>Nice View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>Math-Davinci</h4>
+								<p> 메쓰 다빈치 설명좀 </p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -358,9 +358,9 @@
 										<li><i class="fa fa-comment"></i> <span>280</span></li>
 									</ul>
 								</figure>
-								<h4>Cool Waves</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>Humanity-Davinci</h4>
+								<p> 휴먼다빈치좀 요 </p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -372,23 +372,9 @@
 										<li><i class="fa fa-comment"></i> <span>95</span></li>
 									</ul>
 								</figure>
-								<h4>Plane View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
-							</div>	
-						</div>
-						<div class="item">	
-							<div class="blog-box2">
-								<figure>
-									<img src="img/img5.jpg" alt="image" class="img-responsive">
-									<ul>
-										<li><i class="fa fa-calendar"></i> <span>May 18, 2016</span></li>
-										<li><i class="fa fa-comment"></i> <span>35</span></li>
-									</ul>
-								</figure>
-								<h4>Skie Rides</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>STEAM-Davinci</h4>
+								<p>스팀 다빈치 좀요 </p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 							
@@ -407,7 +393,7 @@
 				<div class="container-fluid">
 				
 					<div class="section-heading">
-						<h2>News</h2>
+						<h2>진로교육연구소</h2>
 						<div class="separator"></div>						
 					</div>
 					
@@ -422,9 +408,9 @@
 										<li><i class="fa fa-comment"></i> <span>180</span></li>
 									</ul>
 								</figure>
-								<h4>Snowy Forest</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>학생 프로그램</h4>
+								<p> 학생 프로그램을 소개합니다</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -436,9 +422,9 @@
 										<li><i class="fa fa-comment"></i> <span>16</span></li>
 									</ul>
 								</figure>
-								<h4>Nice View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>교사/학생 프로그램</h4>
+								<p> 교사 학생 프로그램을 소개합니다.</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -450,39 +436,12 @@
 										<li><i class="fa fa-comment"></i> <span>280</span></li>
 									</ul>
 								</figure>
-								<h4>Cool Waves</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>한국 청소년 R&E 학술대횔</h4>
+								<p> 우아아ㅟㄴ우ㅏㄹ댜ㅣ나윈ㅇㄹ 소객소개</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
-						<div class="item">	
-							<div class="blog-box2">
-								<figure>
-									<img src="img/img4.jpg" alt="image" class="img-responsive">
-									<ul>
-										<li><i class="fa fa-calendar"></i> <span>April 11, 2016</span></li>
-										<li><i class="fa fa-comment"></i> <span>95</span></li>
-									</ul>
-								</figure>
-								<h4>Plane View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
-							</div>	
-						</div>
-						<div class="item">	
-							<div class="blog-box2">
-								<figure>
-									<img src="img/img5.jpg" alt="image" class="img-responsive">
-									<ul>
-										<li><i class="fa fa-calendar"></i> <span>May 18, 2016</span></li>
-										<li><i class="fa fa-comment"></i> <span>35</span></li>
-									</ul>
-								</figure>
-								<h4>Skie Rides</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
-							</div>	
-						</div>
+						
 							
 
 					</div>	
@@ -499,7 +458,7 @@
 				<div class="container-fluid">
 				
 					<div class="section-heading">
-						<h2>News</h2>
+						<h2>심리교육연구소</h2>
 						<div class="separator"></div>						
 					</div>
 					
@@ -514,9 +473,9 @@
 										<li><i class="fa fa-comment"></i> <span>180</span></li>
 									</ul>
 								</figure>
-								<h4>Snowy Forest</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>판별검사</h4>
+								<p> 판별검사  ㄴㅇㅇㅇㅇ</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -528,9 +487,9 @@
 										<li><i class="fa fa-comment"></i> <span>16</span></li>
 									</ul>
 								</figure>
-								<h4>Nice View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>심리검사</h4>
+								<p> 니ㅏㅇ니ㅏㅁ윔나우리마눌ㅇ</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -542,9 +501,9 @@
 										<li><i class="fa fa-comment"></i> <span>280</span></li>
 									</ul>
 								</figure>
-								<h4>Cool Waves</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>심리프로그램</h4>
+								<p> ㅁㅇㅁㄴㅇㄻㄴㅇㄻㄴㅇㄹ</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 						<div class="item">	
@@ -556,23 +515,9 @@
 										<li><i class="fa fa-comment"></i> <span>95</span></li>
 									</ul>
 								</figure>
-								<h4>Plane View</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
-							</div>	
-						</div>
-						<div class="item">	
-							<div class="blog-box2">
-								<figure>
-									<img src="img/img5.jpg" alt="image" class="img-responsive">
-									<ul>
-										<li><i class="fa fa-calendar"></i> <span>May 18, 2016</span></li>
-										<li><i class="fa fa-comment"></i> <span>35</span></li>
-									</ul>
-								</figure>
-								<h4>Skie Rides</h4>
-								<p> Lorem ipsum dolor sit amet Maecenas ullamcorper diam nec augue semper ...</p>		
-								<a href="blog-single.html" class="link">Read more...</a>	
+								<h4>부모교육</h4>
+								<p> ㅁㄴㅇㄻㄴㅇㄻㄴㅇㄻㄴㅇㄹ</p>		
+								<a href="#" class="link">Read more...</a>	
 							</div>	
 						</div>
 							
