--- a/world/views/index.ejs
+++ b/world/views/index.ejs
@@ -186,33 +186,51 @@
 									<div class="col-md-4">
 										<div class="testimonial-box1">
 											<div class="content">
-												<p><i class="fa fa-quote-left"></i> Donec diam quam, sagittis nec velit condimentum, imperdiet tincidunt leo. Vivamus ullamcorper nibh ut purus mattis tempus. Praesent vel enim tincidunt, euismod urna vitae, ullamcorper felis. <i class="fa fa-quote-right"></i></p>
+												<p><i class="fa fa-quote-left"></i>
+												나주시 진학특별반 프로그램<br>
+												나주시 R&E프로그램<br>
+												대전대신고 진학특별반 프로그램(예정)<br>
+												대전 대신고 R&E프로그램(예정)<br>
+												광주일고 진학특별반 프로그램(예정)<br>
+												한국R&E학술대회 개최(KAIST, 예정)
+												<i class="fa fa-quote-right"></i></p>
 											</div>
 											<div class="author">
 												<img src="img/team1.jpg" alt="" class="img-responsive circle">
-												<p> <span>John Doe</span> Founder, ABC Company </p>
+												<p> <span>2016</span> WCE </p>
 											</div>
 										</div>
 									</div>
 									<div class="col-md-4">
 										<div class="testimonial-box1">
 											<div class="content">
-												<p><i class="fa fa-quote-left"></i> Donec diam quam, sagittis nec velit condimentum, imperdiet tincidunt leo. Vivamus ullamcorper nibh ut purus mattis tempus. Praesent vel enim tincidunt, euismod urna vitae, ullamcorper felis. <i class="fa fa-quote-right"></i></p>
+												<p><br><i class="fa fa-quote-left"></i> 
+												대전대신고 진학특별반 프로그램<br>
+												대전대신고 R&E프로그램<br>
+												세종과학예술영재학교 산학연체험연계프로그램<br>
+												당진신평고등학교 R&E프로그램
+
+											 	<i class="fa fa-quote-right"></i>
+												 <br><br></p>
 											</div>
 											<div class="author">
 												<img src="img/team2.jpg" alt="" class="img-responsive rounded">
-												<p> <span>Josh Smith</span> Designer, X Inc. </p>
+												<p> <span>2015</span> WCE </p>
 											</div>
 										</div>
 									</div>
 									<div class="col-md-4">
 										<div class="testimonial-box1">
 											<div class="content">
-												<p><i class="fa fa-quote-left"></i> Donec diam quam, sagittis nec velit condimentum, imperdiet tincidunt leo. Vivamus ullamcorper nibh ut purus mattis tempus. Praesent vel enim tincidunt, euismod urna vitae, ullamcorper felis. <i class="fa fa-quote-right"></i></p>
+												<p><br><br><i class="fa fa-quote-left"></i> 
+												대전대신고 진학특별반 프로그램<br>
+												대전대신고 R&E프로그램
+												<i class="fa fa-quote-right"></i>
+												<br><br><br></p>
 											</div>
 											<div class="author">
 												<img src="img/team3.jpg" alt="" class="img-responsive square">
-												<p> <span>Eric White</span> Designer, Y Corp. </p>
+												<p> <span>2014</span>WCE </p>
 											</div>
 										</div>
 									</div>
@@ -223,7 +241,12 @@
 						<div class="col-md-4">
 							<div class="testimonial-box1">
 								<div class="content">
-									<p><i class="fa fa-quote-left"></i> Donec diam quam, sagittis nec velit condimentum, imperdiet tincidunt leo. Vivamus ullamcorper nibh ut purus mattis tempus. Praesent vel enim tincidunt, euismod urna vitae, ullamcorper felis. <i class="fa fa-quote-right"></i></p>
+									<p><i class="fa fa-quote-left"></i> 
+									경기도용인교육지원청 STEAM교육연수<br>
+									인천송천고등학교 R&E프로그램<br>
+									문경여자고등학교 R&E프로그램<br>
+									서울혜화여자고등학교 R&E프로그램
+									<i class="fa fa-quote-right"></i></p>
 								</div>
 								<div class="author">
 									<img src="img/team4.jpg" alt="" class="img-responsive circle">
@@ -286,7 +309,7 @@
 											<a href="#" class="btn btn-success btn-lg btn-block">Choose Plan</a>							
 										</div>
 									</div>
-									<div class="col-md-4">
+									<div class="col-md-4" style="visibility: hidden;">
 										<div class="price-box3">
 											<h2>Standard</h2>
 											<p>For medium sized teams</p>
@@ -332,7 +355,7 @@
 			<!-- ./조직도-->
 			
 			<!-- vision -->
-			<section id="vision" class="section wow fadeInUp">
+			<section id="vision" class="section wow fadeInUp" style="text-align: center;">
 				<div class="container-fluid">
 				
 					<div class="section-heading">
@@ -341,49 +364,23 @@
 					</div>
 					
 					<!-- blog-carousel2 -->	
-					<div id="blog-carousel2" class="owl-carousel">
-						<div class="item" >	
-							<div class="blog-box2">
+					<div class="container" >
+						<div class="item">	
+							<div class="blog-box2 ">
 								<figure>
-									<img src="img/img1.jpg" alt="image" class="img-responsive">
+									<img src="img/img1.jpg" alt="image" class="img-responsive" style="margin: auto">
 									<ul>
 										<li><i class="fa fa-calendar"></i> <span>Jan 3, 2016</span></li>
 										<li><i class="fa fa-comment"></i> <span>180</span></li>
 									</ul>
 								</figure>
-								<h4>학생 프로그램</h4>
-								<p> 학생 프로그램을 소개합니다</p>		
-								<a href="#" class="link">Read more...</a>	
-							</div>	s
-						</div>
-						<div class="item">	
-							<div class="blog-box2">
-								<figure>
-									<img src="img/img2.jpg" alt="image" class="img-responsive">
-									<ul>
-										<li><i class="fa fa-calendar"></i> <span>Feb 16, 2016</span></li>
-										<li><i class="fa fa-comment"></i> <span>16</span></li>
-									</ul>
-								</figure>
-								<h4>교사/학생 프로그램</h4>
-								<p> 교사 학생 프로그램을 소개합니다.</p>		
-								<a href="#" class="link">Read more...</a>	
+								<h4 style="text-align: center;">학생 프로그램</h4>
+								<p style="text-align: center;"> 학생 프로그램을 소개합니다</p>		
+								<a href="#" class="link" style="text-align: center;">
+								Read more...</a>	
 							</div>	
 						</div>
-						<div class="item">	
-							<div class="blog-box2">
-								<figure>
-									<img src="img/img3.jpg" alt="image" class="img-responsive">
-									<ul>
-										<li><i class="fa fa-calendar"></i> <span>March 8, 2016</span></li>
-										<li><i class="fa fa-comment"></i> <span>280</span></li>
-									</ul>
-								</figure>
-								<h4>한국 청소년 R&E 학술대횔</h4>
-								<p> 우아아ㅟㄴ우ㅏㄹ댜ㅣ나윈ㅇㄹ 소객소개</p>		
-								<a href="#" class="link">Read more...</a>	
-							</div>	
-						</div>
+						
 						
 							
 
@@ -509,7 +506,7 @@
 										</div>
 										<div class="col-md-4 col-sm-4">
 											<div class="contact-info">			
-												<i class="fa fa-phone"></i> 070-4694-0960
+												<i class="fa fa-phone"></i> 042-825-8203
 											</div>
 										</div>
 							</div>
